Feat: security enhancement (#7)
* feat: security enhancement

* chore: add health check head and swagger
